--- a/lms/templates/static_htmlbook.html
+++ b/lms/templates/static_htmlbook.html
@@ -12,6 +12,9 @@
 </%block>
 
 <%block name="js_extra">
+% if notes_enabled:
+<script type="text/javascript" src="${static.url('coffee/src/notes.js')}"></script>
+% endif
   <script type="text/javascript">
 (function($) {
     $.fn.myHTMLViewer = function(options) {
@@ -108,10 +111,7 @@
             options.anchor_id = ${anchor_id};
         %endif
 
-        options.notesEnabled = false;
-        %if notes_enabled is not UNDEFINED and notes_enabled:
-            options.notesEnabled = true;
-        %endif
+        options.notesEnabled = ${'true' if notes_enabled else 'false'};
 
         $('#outerContainer').myHTMLViewer(options);
     });
